fix:z-index

--- a/styles/seatSelect/index.module.scss
+++ b/styles/seatSelect/index.module.scss
@@ -57,6 +57,7 @@
   right: 0;
   margin: auto;
   margin-top: 1.5rem;
+  z-index: -1;
 }
 
 .erorrIcon {
